feat: movendo scroll com o arrastar do elemento

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,3 +1,12 @@
+* {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari, Chrome, Opera, Samsung */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Edge, IE */
+  user-select: none; /* Modern browsers */
+ }
+
 body {
   margin: 0;
   padding: 0;
