--- a/example/src/index.css
+++ b/example/src/index.css
@@ -7,6 +7,11 @@
   user-select: none; /* Modern browsers */
  }
 
+ html, body, #root {
+  width: 100%;
+  height: auto;
+ }
+
 body {
   margin: 0;
   padding: 0;
